# knot-zephyr-source

./: CMakeLists.txt
src/: hello.c  peripheral.nrf52840  sm.c  storage.c  storage.h
